Update hosting information from Sourcehut to Vercel

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
 
-    <h1>tuong's page (but hosted on sourcehut)</h1>
+    <h1>tuong's page (but hosted on vercel)</h1>
     
     <p>
         Hi there! I'm <strong>tuong</strong>, you can call me "tuong" or "pofesiunal devlepeur" and i'm from <strong>Vietnam</strong>.
@@ -69,7 +69,7 @@
     </ul>
 
     <hr>
-    <p><small>Hosted on Sourcehut — <a href="https://srht.site">srht.site</a></small></p>
+    <p><small>Hosted on Vercel <3 — <a href="https://vercel.com">srht.site</a></small></p>
 
 </body>
 </html>
