--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
             --md-sys-color-background: #1C1B1F;
             --md-sys-color-on-background: #E6E1E5;
             --md-sys-color-surface: #25232A;
-            --md-sys-color-primary: #D0BCFF;
-            --md-sys-color-secondary: #CCC2DC;
-            --md-sys-color-tertiary: #EFB8C8;
+            /* CHANGED: Accent colors to Orange */
+            --md-sys-color-primary: #FFB74D;  /* Main Orange */
+            --md-sys-color-secondary: #E6BEAC; /* Muted Warm Beige */
+            --md-sys-color-tertiary: #FF8A65; /* Deep Orange/Coral */
             --md-sys-color-outline: #938F99;
             --md-sys-color-surface-variant: #49454F;
         }
 
         body { 
-            font-family: 'Google Sans Flex', sans-serif; 
+            font-family: 'Google Sans Flex'; 
             line-height: 1.6; 
             max-width: 600px; 
             margin: 40px auto; 
@@ -70,6 +71,14 @@
 
     <h1>nc4tt's page</h1>
     <p>Hi there! I'm <strong>nc4tt</strong> or u can call me as <strong>tuong</strong> and i'm' from <strong>Vietnam</strong>.</p>
+
+    <h3>my websites:</h3>
+    <div class="card">
+        <ul>
+            <li><a href="https://git.tuong.qzz.io">my git site</a></li>
+            <li><a href="https://tuong.qzz.io">tuong.qzz.io</a> (this site)</li>
+        </ul>
+    </div>
 
     <h3>languages:</h3>
     <div class="card">
